Functioning Lang Dump Script  - Added Menu option for building Language Script which dumps call details to output  - Revised dumped info for better parsing and post processing  - Cleaned up comments

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -256,6 +256,9 @@
     <addaction name="menuOpenRecent"/>
     <addaction name="menuExamples"/>
     <addaction name="fileActionReload"/>
+    <addaction name="fileDumpLangScript"/>
+    <addaction name="fileShowLibraryFolder"/>
+    <addaction name="separator"/>
     <addaction name="fileActionClose"/>
     <addaction name="separator"/>
     <addaction name="fileActionSave"/>
@@ -899,6 +902,12 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+[</string>
+  <action name="fileDumpLangScript">
+   <property name="text">
+    <string>Dump Lang Script</string>
+   </property>
+   <property name="toolTip">
+    <string>Dump Lang Script</string>
    </property>
   </action>
  </widget>
